kogito-quarkus-examples/process-knative-quickstart-quarkus/operator/kubernetes/ingress.yaml
# OPTIONAL! You should have your own way to expose the service, this is just a suggestion
# After deploying your service via process-knative-quickstart-quarkus, use this file to expose it
# Ref.: https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/#create-an-ingress-resource
# don't forget to edit your /etc/hosts file!!
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: process-knative-quickstart-quarkus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: process-knative-quickstart-quarkus.kogito
      http:
        paths:
          - path: /
            backend:
              serviceName: process-knative-quickstart-quarkus
              servicePort: 80
